# streamlit_stock_filter

./: .gitattributes  .gitignore  CLEANUP_SUMMARY.md  FinancialDataProcessor.py  PIPELINE_INTEGRATION_SUMMARY.md  PIPELINE_REDESIGN.md  README.md  RatioCalculator.py  add_description_column.py  app.py  app_generate_price_chart.py  app_helper.py  app_new.py  app_plots.py  auth.py  auth_ui.py  avg_growth_rate.py  before_after_analysis.py  config.yaml  config_mappings.py  config_utils.py  content_generator.py  create_filter_states_table.sql  daily_capture.py  data_fetcher.py  data_io.py  debug_data_processor.py  debug_ratio_data.py  experiments.ipynb  financial_metrics.py  financial_utils.py  fundamentals_trend.csv  fundamentals_trend.py  io_utils.py  main.py  mappings.ipynb  naming_structure.txt  parallel_coordinates.ipynb  pipeline_runner.py  price_data_collector.py  (+25 more)
.github/: copilot-instructions.md
.streamlit/: config.toml
balance/: 2CUREX.csv  4C.csv  8TRA.csv  AAC.csv  AAK.csv  ABB.csv  ABSO.csv  ACAD.csv  ACARIX.csv  ACAST.csv  ACCON.csv  ACE.csv  ACOU.csv  ACRI-A.csv  ACROUD.csv  ACTI.csv  ACUVI.csv  ADDT-B.csv  ADDV-A.csv  ADTR.csv  ADVBOX.csv  ADVE.csv  AEC.csv  AERO.csv  AFRY.csv  AGES-B.csv  AGROUP.csv  AGTIRA-B.csv  AINO.csv  AJA-B.csv  ALBERT.csv  ALCA.csv  ALFA.csv  ALIF-B.csv  ALIG.csv  ALIV-SDB.csv  ALLEI.csv  ALLIGO-B.csv  ALM.csv  ALPCOT-B.csv  (+682 more)
cashflow/: 2CUREX.csv  4C.csv  8TRA.csv  AAC.csv  AAK.csv  ABB.csv  ABSO.csv  ACAD.csv  ACARIX.csv  ACAST.csv  ACCON.csv  ACE.csv  ACOU.csv  ACRI-A.csv  ACROUD.csv  ACTI.csv  ACUVI.csv  ADDT-B.csv  ADDV-A.csv  ADTR.csv  ADVBOX.csv  ADVE.csv  AEC.csv  AERO.csv  AFRY.csv  (+696 more)
(+2548 files in other folders)
