[project]
name = "streamlit_stock_filter"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "finta>=1.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pathlib>=1.0.1",
    "plotly>=6.2.0",
    "pwlf>=2.5.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
    "supabase>=2.18.1",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
]
